--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "do-done",
+  "name": "done",
   "version": "0.1.0",
   "private": true,
-  "description": "Do.Done - Minimalist Todo App",
+  "description": "Done - Minimalist Todo App",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
